Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34240

galera.MDEV-27862 fails binlog assert in close_thread_tables()

Details

    • Bug
    • Status: Closed (View Workflow)
    • Blocker
    • Resolution: Fixed
    • 11.5.1
    • 11.5.2
    • Galera
    • None

    Description

      sql/sql_base.cc:970: int close_thread_tables(THD*): Assertion `(thd->state_flags & Open_tables_state::BACKUPS_AVAIL) || !thd->has_pending_row_events()' failed.
      240526 17:39:03 [ERROR] mysqld got signal 6 ;
      

      Attachments

        Issue Links

          Activity

            People

              monty Michael Widenius
              serg Sergei Golubchik
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.